--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@expo/cli": "^0.18.14",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
